# tfsc-android-app

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tfsc/tfscandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tfsc/tfscandroid/: MainActivity.java
app/src/main/java/com/tfsc/tfscandroid/bean/: BalanceReq.java  BaseRequest.java  InvestBean.java  TransBeans.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/tfsc/tfscandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
sdk/src/androidTest/java/com/tfsc/sdk/: ExampleInstrumentedTest.java
sdk/src/main/cpp/: CMakeLists.txt  jni_tools.h  log.h  src_envelop_Envelop.cpp  src_sig_sig.cpp  src_sig_sig.h
sdk/src/main/cpp/envelop/: Envelop.cpp  Envelop.h  base58.h  base64.cpp  base64.h  debug.h  ptrcomponent.cpp  ptrcomponent.h  tx.cpp  tx.h
sdk/src/main/cpp/sig/: sig.cpp  sig.h  sigTx.cpp  sigTx.h
sdk/src/main/cpp/third/openssl/: ssl.h
sdk/src/main/java/com/tfsc/sdk/: Account.java  Wallet4Android.java
sdk/src/test/java/com/tfsc/sdk/: ExampleUnitTest.java
wallet/: build.gradle
wallet/src/androidTest/java/tfsc/wallet/sdk/: ExampleInstrumentedTest.java
wallet/src/main/cpp/: CMakeLists.txt  jni_tools.cpp  jni_tools.h  log.h  src_envelop_Envelop.cpp  src_envelop_Envelop.h  src_sig_sig.cpp  src_sig_sig.h
wallet/src/main/cpp/api/: interface.cpp  interface.h
wallet/src/main/cpp/envelop/: Envelop.cpp  Envelop.h  RSA_TEXT.cpp  RSA_TEXT.h  base58.cpp  base64.cpp  base64.h  bip39.cpp  debug.h  pbkdf2.cpp  sha2.cpp  tx.cpp  tx.h
wallet/src/main/cpp/evmone/: evmc.cpp  evmc.hpp
wallet/src/main/cpp/sig/: sig.cpp  sigTx.cpp  sigTx.h
wallet/src/main/cpp/third/cryptopp/: cpu.h
wallet/src/main/cpp/third/openssl/: crypto.h  pem.h  x509_vfy.h
wallet/src/main/java/tfsc/wallet/sdk/: Account.java  Wallet4Android.java
wallet/src/test/java/tfsc/wallet/sdk/: ExampleUnitTest.java
